--- a/stylus/application.styl
+++ b/stylus/application.styl
@@ -1,6 +1,6 @@
 @import "nib";
-@import "normalize";
-@import "main";
-@import "box";
-@import "socialbox";
-@import "button";
+@import "base/normalize";
+@import "base/main";
+@import "modules/box";
+@import "modules/socialbox";
+@import "modules/button";
