--- a/views/application.ejs
+++ b/views/application.ejs
@@ -2,32 +2,37 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
 	<head>
 		<meta charset="utf-8">
-		<title><% site.title %>: <% site.subtitle %></title>
+		<title><%= site.title %>: <%= site.subtitle %></title>
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="google-site-verification" content="<% site.google_web_master %>">
+		<meta name="google-site-verification" content="<%= site.google_web_master %>">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 
-		<meta name="author" content="<% site.author %>">
-		<meta name="description" content="<% site.subtitle %>">
+		<meta name="author" content="<%= site.author %>">
+		<meta name="description" content="<%= site.subtitle %>">
 		
-		<meta property="og:title" content="<% site.title %>">
-		<meta property="og:description" content="<% site.subtitle %>">
-		<meta property="og:url" content="<% domain %>">
-		<meta property="og:site_name" content="<% site.title %>">
+		<meta property="og:title" content="<%= site.title %>">
+		<meta property="og:description" content="<%= site.subtitle %>">
+		<meta property="og:url" content="<%= domain %>">
+		<meta property="og:site_name" content="<%= site.title %>">
 		<meta property="og:type" content="website">
-		<meta property="og:image"	content="<% domain %><% site.main_image %>">
+		<meta property="og:image"	content="<%= domain %><%= site.main_image %>">
 
-		<meta property="article:author"	content="<% site.author_google_plus %>">
+		<meta property="article:author"	content="<%= site.author_google_plus %>">
 		<meta property="article:section" content="main">
 		<meta property="article:tag" content="Node.js, Modules, Web Modules, Node.js Frameworks, Web Frameworks">
 
-		<meta name="twitter:creator"	content="@<% site.author_twitter %>">
+		<meta name="twitter:creator"	content="@<%= site.author_twitter %>">
 		<meta name="twitter:card" content="summary">
-		<meta name="twitter:url" content="<% domain %>">
-		<meta name="twitter:title" content="<% site.title %>">
-		<meta name="twitter:description" content="<% site.subtitle %>">
-		<meta name="twitter:image" content="<% domain %><% site.main_image %>">
+		<meta name="twitter:url" content="<%= domain %>">
+		<meta name="twitter:title" content="<%= site.title %>">
+		<meta name="twitter:description" content="<%= site.subtitle %>">
+		<meta name="twitter:image" content="<%= domain %><%= site.main_image %>">
+
+		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<!--[if lt IE 9]>
+			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+		<![endif]-->
 
 		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Noticia+Text' rel='stylesheet'>
@@ -41,7 +46,7 @@
 		<nav class="social-box">
 			<% include _socials %>
 		</nav>
-		<main>
+		<main class="js-web-module">
 			<% include _modules %>
 		</main>
 		<footer class="footer">
@@ -58,5 +63,6 @@
 			</small>
 		</footer>
 		<% include _analytics %>
+		<script src="application.js"></script>
 	</body>
 </html>
