--- a/views/_socials.ejs
+++ b/views/_socials.ejs
@@ -1,6 +1,6 @@
 <div class="social-button">
 	<div class="fb-like" 
-			 data-href="<% domain %>" 
+			 data-href="<%= domain %>" 
 			 data-width="30" 
 			 data-layout="button_count" 
 			 data-show-faces="false" 
@@ -11,15 +11,15 @@
 <div class="social-button">
 	<a href="https://twitter.com/share" 
 		 class="twitter-share-button" 
-		 data-text="<% site.subtitle %>" 
-		 data-via="<% site.author_twitter %>" 
-		 data-url="<% domain %>" 
+		 data-text="<%= site.subtitle %>" 
+		 data-via="<%= site.author_twitter %>" 
+		 data-url="<%= domain %>" 
 		 data-lang="en"></a>
 	<script type="text/javascript" async defer>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div class="social-button">
 	<div class="g-plusone" 
 			 data-size="medium" 
-			 data-href="<% domain %>"></div>
+			 data-href="<%= domain %>"></div>
 	<script type="text/javascript" async defer>!(function(){var po=document.createElement('script');po.type='text/javascript'; po.async=true;po.src='//apis.google.com/js/plusone.js';var s=document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);})();</script>
 </div>
