--- a/views/application.ejs
+++ b/views/application.ejs
@@ -34,13 +34,13 @@
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 
-		<link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+		<link href="/favicon.ico" rel="shortcut icon" type="image/x-icon">
 		<link href='http://fonts.googleapis.com/css?family=Noticia+Text' rel='stylesheet'>
-		<link href="application.css" rel="stylesheet">
+		<link href="/application.css" rel="stylesheet">
 	</head>
 	<body>
 		<header class="header">
-			<h1>Node Web Modules</h1>
+			<img src="<%= site.logo_image %>" alt="Node Web Modules" width="372" height="150">
 			<h2>A collection of web frameworks for Node.js</h2>
 		</header>
 		<nav class="social-box">
@@ -53,9 +53,9 @@
 			<strong>
 				Copyright (c) by <a href="http://crpwebdev.com" target="_blank">Caio R. Pereira</a> 2013. Powered by <a href="http://github.com" target="_blank">Github</a> with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>.
 				<br>
-				Do you wanna add your module? <a href="https://github.com/caio-ribeiro-pereira/node-web-frameworks" target="_blank">Just fork me</a> :)
+				Do you wanna add your module? <a href="https://github.com/caio-ribeiro-pereira/node-web-frameworks" target="_blank">Just fork me</a>. :)
 				<br>
-				Are you looking for a good book about Node.js? <a href="http://www.casadocodigo.com.br/products/livro-nodejs" target="_blank">Read this!</a>
+				Are you looking for a good book about Node.js? <a href="http://www.casadocodigo.com.br/products/livro-nodejs" target="_blank">Read this</a>.
 			</strong>
 			<br>
 			<small>
