--- a/views/application.ejs
+++ b/views/application.ejs
@@ -1,33 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
 	<head>
-		<meta charset="utf-8">
-		<title><%= site.title %>: <%= site.subtitle %></title>
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<meta name="google-site-verification" content="<%= site.google_web_master %>">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="apple-mobile-web-app-capable" content="yes">
-
-		<meta name="author" content="<%= site.author %>">
-		<meta name="description" content="<%= site.subtitle %>">
-		
-		<meta property="og:title" content="<%= site.title %>">
-		<meta property="og:description" content="<%= site.subtitle %>">
-		<meta property="og:url" content="<%= domain %>">
-		<meta property="og:site_name" content="<%= site.title %>">
-		<meta property="og:type" content="website">
-		<meta property="og:image"	content="<%= domain %><%= site.main_image %>">
-
-		<meta property="article:author"	content="<%= site.author_google_plus %>">
-		<meta property="article:section" content="main">
-		<meta property="article:tag" content="Node.js, Modules, Web Modules, Node.js Frameworks, Web Frameworks">
-
-		<meta name="twitter:creator"	content="@<%= site.author_twitter %>">
-		<meta name="twitter:card" content="summary">
-		<meta name="twitter:url" content="<%= domain %>">
-		<meta name="twitter:title" content="<%= site.title %>">
-		<meta name="twitter:description" content="<%= site.subtitle %>">
-		<meta name="twitter:image" content="<%= domain %><%= site.main_image %>">
+		<title><%= site.subtitle %> - <%= site.title %></title>
+		<% include _metatags %>
 
 		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -44,23 +19,27 @@
 			<h2>A collection of web frameworks for Node.js</h2>
 		</header>
 		<nav class="social-box">
+			<h4>
+				Do you wanna add your Node web module? <a href="https://github.com/caio-ribeiro-pereira/node-web-modules/blob/master/README.md" target="_blank">Please read this before sending it</a>.
+			</h4>
 			<% include _socials %>
+			<h4>Most watched modules</h4>
 		</nav>
 		<main class="js-web-module">
 			<% include _modules %>
 		</main>
 		<footer class="footer">
-			<strong>
-				Copyright (c) by <a href="http://crpwebdev.com" target="_blank">Caio R. Pereira</a> 2013. Powered by <a href="http://github.com" target="_blank">Github</a> with <a href="http://jekyllrb.com" target="_blank">Jekyll</a>.
+			<p>
+				Copyright (c) by <a href="http://crpwebdev.com" target="_blank">Caio R. Pereira</a> 2013-<%= new Date().getFullYear() %>. 
 				<br>
-				Do you wanna add your module? <a href="https://github.com/caio-ribeiro-pereira/node-web-frameworks" target="_blank">Just fork me</a>. :)
+				Powered by <a href="http://nodejs.org" target="_blank">Node.js</a> with <a href="http://expressjs.com" target="_blank">Express</a>, <a href="http://redis.io" target="_blank">Redis</a> and <a href="http://developer.github.com/v3" target="_blank">Github API</a> and licensed under <a href="http://caio-ribeiro-pereira.mit-license.org" target="_blank">MIT License</a>.
 				<br>
-				Are you looking for a good book about Node.js? <a href="http://www.casadocodigo.com.br/products/livro-nodejs" target="_blank">Read this</a>.
-			</strong>
-			<br>
-			<small>
-				<a href="http://nodejs.org" target="_blank">Node.js</a> is an official trademark of <a href="http://joyent.com" target="_blank">Joyent</a>. This site is not formally related to or endorsed by the official Joyent commercial project.
-			</small>
+				Do you wanna read <a href="http://www.casadocodigo.com.br/products/livro-nodejs" target="_blank">my Node.js book?</a>.
+				<br>
+				<a href="http://nodejs.org" target="_blank">Node.js</a> is an official trademark of <a href="http://joyent.com" target="_blank">Joyent</a>. 
+				<br>
+				This site is not formally related to or endorsed by the official Joyent commercial project.
+			</p>
 		</footer>
 		<% include _analytics %>
 		<script src="application.js"></script>
