--- a/stylus/application.styl
+++ b/stylus/application.styl
@@ -1,6 +1,15 @@
 @import "nib";
 @import "base/normalize";
 @import "base/main";
-@import "modules/box";
-@import "modules/socialbox";
+
+@import "modules/box/box";
+@import "modules/box/box__header";
+@import "modules/box/box__main";
+@import "modules/box/box__content";
+@import "modules/box/box__figure";
+@import "modules/box/box__detail";
+@import "modules/box/box__aside";
+
+@import "modules/social/social";
+@import "modules/social/social__button";
 @import "modules/button";
