--- a/views/_socials.ejs
+++ b/views/_socials.ejs
@@ -1,5 +1,5 @@
-<strong>Share this:</strong>
-<div class="social-button">
+<p>Share this:</p>
+<div class="social__button">
 	<div class="fb-like" 
 			 data-href="<%= domain %>" 
 			 data-width="30" 
@@ -9,7 +9,7 @@
 	<div id="fb-root"></div>
 	<script type="text/javascript" async defer>!(function(d, s, id) {var js,fjs = d.getElementsByTagName(s)[0];if(d.getElementById(id))return;js=d.createElement(s);js.id=id;js.src="//connect.facebook.net/en_US/all.js#xfbml=1";fjs.parentNode.insertBefore(js, fjs);}(document, 'script', 'facebook-jssdk'));</script>
 </div>
-<div class="social-button">
+<div class="social__button">
 	<a href="https://twitter.com/share" 
 		 class="twitter-share-button" 
 		 data-text="<%= site.subtitle %>" 
@@ -18,7 +18,7 @@
 		 data-lang="en"></a>
 	<script type="text/javascript" async defer>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
-<div class="social-button">
+<div class="social__button">
 	<div class="g-plusone" 
 			 data-size="medium" 
 			 data-href="<%= domain %>"></div>
