--- a/views/application.ejs
+++ b/views/application.ejs
@@ -18,7 +18,7 @@
 			<img src="<%= site.logo_image %>" alt="Node Web Modules" width="372" height="150">
 			<h2>A collection of web frameworks for Node.js</h2>
 		</header>
-		<nav class="social-box">
+		<nav class="social">
 			<h4>
 				Do you wanna add your Node web module? <a href="https://github.com/caio-ribeiro-pereira/node-web-modules/blob/master/README.md" target="_blank">Please read this before sending it</a>.
 			</h4>
